started to refactor ManifestAnalyzer