@@ -18,24 +18,20 @@ import java.net.URLClassLoader;
 /**
  * @author luc.hogie, Marc Karassev
  */
-public class JarFileAnalyser extends ClassesAnalyzer {
+public class JarFileAnalyser extends ClassesAnalyzer implements JarAnalyzer {
 
-    public IModel createModelFromJar(String jarPath) {
-        try {
-            URL url = new URL("file://" + jarPath);
-            File file = new File(url.getPath());
-            RegularFile jarFile = RegularFile.createTempFile("lmu-", ".jar");
-            ClassLoader classLoader = new URLClassLoader(new URL[] { jarFile.toURL() });
-            ClassPath classContainers = new ClassPath();
+    @Override
+    public IModel createModelFromJar(String jarPath) throws IOException {
+        URL url = new URL("file://" + jarPath);
+        File file = new File(url.getPath());
+        RegularFile jarFile = RegularFile.createTempFile("lmu-", ".jar");
+        ClassLoader classLoader = new URLClassLoader(new URL[] { jarFile.toURL() });
+        ClassPath classContainers = new ClassPath();
 
-            jarFile.setContent(FileUtilities.getFileContent(file));
-            classContainers.add(new ClassContainer(jarFile, classLoader));
-            this.classes = classContainers.listAllClasses();
-            jarFile.delete();
-        }
-        catch (IOException ex) {
-            throw new IllegalStateException();
-        }
+        jarFile.setContent(FileUtilities.getFileContent(file));
+        classContainers.add(new ClassContainer(jarFile, classLoader));
+        this.classes = classContainers.listAllClasses();
+        jarFile.delete();
 
         return createModel();
     }
